add documentation and descripto-prefix

--- a/doc/src/asciidoc/master.adoc
+++ b/doc/src/asciidoc/master.adoc
@@ -79,6 +79,7 @@ include::ch07/writing_first_script.adoc[]
 include::ch07/qtest.adoc[]
 include::ch07/qbeansupport.adoc[]
 include::ch07/dynamic_classloading.adoc[]
+include::ch07/templates.adoc[]
 
 = Q2 jPOS Services
 include::ch08/intro.adoc[]
