Remove `ReConfigurable` reference from doc [ci skip].

--- a/doc/src/asciidoc/ch02/jposiso.adoc
+++ b/doc/src/asciidoc/ch02/jposiso.adoc
@@ -670,7 +670,7 @@ Let's have a look at a very simple filter, DelayFilter:
 [source,java]
 ----
 
-    public class DelayFilter implements ISOFilter, ReConfigurable {
+    public class DelayFilter implements ISOFilter, Configurable {
         long delay;
         public DelayFilter() {
             super();
