--- a/doc/src/asciidoc/ch01/about.adoc
+++ b/doc/src/asciidoc/ch01/about.adoc
@@ -3,9 +3,9 @@
 The jPOS project is hosted at http://jpos.org.
 In order to stay up-to-date with jPOS news, you may want to visit
 the project's main page, as well as its blog at http://jpos.org/blog.
-For an up to date list of project resources, you can visit the http://jpos.org/resources page.
+For an up-to-date list of project resources, you can visit the http://jpos.org/resources page.
 There's also a low traffic *jPOS News* mailing list where we post important
-announcements, such as a the availability of new versions of this guide. You're
+announcements, such as the availability of new versions of this guide. You're
 encouraged to register by visiting the project's main page at http://jpos.org.
 
 Code is hosted at http://github.com/jpos/jPOS.
@@ -21,6 +21,6 @@ We are also active on https://jpos.slack.com[Slack]. Please request an invitatio
 
 [TIP]
 ====
-If you happen to tweet about jPOS, please use the hash tag `#jPOS` so we can follow you.
+If you happen to tweet about jPOS, please use the hashtag `#jPOS` so we can follow you.
 ====
 
